# agentiso

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  config.toml
.claude/agents/: doc-weenie.md  guest-agent.md  mcp-server.md  sec-auth-secrets.md  sec-frontend.md  sec-input-validation.md  sec-network.md  sec-privilege.md  sec-vm-boundary.md  storage-net.md  vm-engine.md  workspace-core.md
agentiso/: Cargo.toml
agentiso/src/: cli.rs  config.rs  init.rs  main.rs  util.rs
agentiso/src/dashboard/: data.rs  mod.rs  ui.rs
agentiso/src/dashboard/web/: auth.rs  batch.rs  embedded.rs  mod.rs  system.rs  teams.rs  vault.rs  workspaces.rs  ws.rs
agentiso/src/guest/: mod.rs  protocol.rs
agentiso/src/mcp/: auth.rs  bridge.rs  git_tools.rs  metrics.rs  mod.rs  rate_limit.rs  team_tools.rs  tools.rs  vault.rs
agentiso/src/network/: bridge.rs  dhcp.rs  mod.rs  nftables.rs
agentiso/src/storage/: mod.rs  zfs.rs
agentiso/src/team/: agent_card.rs  message_relay.rs  mod.rs  task_board.rs
agentiso/src/vm/: cgroup.rs  microvm.rs  mod.rs  opencode.rs  qemu.rs  vsock.rs
agentiso/src/workspace/: mod.rs  orchestrate.rs  pool.rs  snapshot.rs
deploy/: README-claude-code.md  README-opencode.md  agentiso.service  claude-code-mcp.json  install.sh
docs/: architecture.md  assessment.md  configuration.md  tools.md  troubleshooting.md  workflows.md
docs/eval/: 2026-02-17-readiness-eval.md  2026-02-19-readiness-eval.md
docs/plans/: 2026-02-16-agentiso-design.md  2026-02-17-boot-latency-impl.md  2026-02-19-teams-design.md  2026-02-19-vault-integration-design.md  2026-02-20-a2a-agent-daemon-plan.md  2026-02-20-swarm-taming-design.md  2026-02-21-frontend-kanban-design.md  2026-02-23-frontend-tweaks.md
docs/plans/done/: 2026-02-16-agentiso-design.md  2026-02-17-boot-latency-design.md  2026-02-19-opencode-sprint-design.md  2026-02-19-phase4-messaging-plan.md  2026-02-19-teams-impl-plan.md  2026-02-20-orchestration-test-harness-design.md  2026-02-20-orchestration-test-impl.md  2026-02-20-p0-p1-hardening.md  2026-02-20-phase5-6-plan.md  2026-02-21-mcp-bridge-design.md
docs/security/: SECURITY-REVIEW.md  auth-secrets-audit.md  frontend-audit.md  input-validation-audit.md  network-audit.md  privilege-audit.md  vm-boundary-audit.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.css  types.ts
frontend/src/api/: client.ts  realtimeSync.ts  teams.ts  vault.ts  websocket.ts  workspaces.ts
frontend/src/components/common/: ConfirmDialog.tsx  ConnectionStatus.tsx  LoadingSkeleton.tsx  NotificationCenter.tsx  SparkLine.tsx  StatusDot.tsx  Toast.tsx  index.ts
frontend/src/components/kanban/: Board.tsx  BoardSelector.tsx  Card.tsx  CardDetail.tsx  Column.tsx  KanbanDemo.tsx  TableView.tsx  index.ts  kanban.css
frontend/src/components/layout/: CommandPalette.tsx  PaneManager.tsx  Sidebar.tsx  TopBar.tsx  index.ts
frontend/src/components/teams/: CreateTaskDialog.tsx  TeamChat.tsx  TeamDetailPane.tsx
frontend/src/components/terminal/: TerminalPane.tsx  TerminalTabs.tsx
frontend/src/components/vault/: BacklinkPanel.tsx  GraphView.tsx  NoteEditor.tsx  VaultSearch.tsx  VaultTree.tsx  index.ts
frontend/src/components/vault/extensions/: FrontmatterBlock.ts  TagMark.ts  WikiLink.ts
frontend/src/components/workspace/: WorkspaceDetailPane.tsx
frontend/src/constants/: board.ts
frontend/src/hooks/: useConnectionStatus.ts  useKeyboard.ts  useResponsive.ts
frontend/src/mocks/: index.ts  vault.ts  workspaces.ts
frontend/src/stores/: metrics.ts  notifications.ts  teams.ts  terminals.ts  ui.ts  vault.ts  workspaces.ts
frontend/src/types/: vault.ts  workspace.ts
guest-agent/: Cargo.toml
guest-agent/src/: daemon.rs  main.rs
images/: README.md  build-alpine-node.sh  build-alpine-opencode.sh  build-alpine-python.sh  build-alpine-rust.sh  build-alpine.sh
images/kernel/: build-initrd.sh  build-kernel.sh
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: build-release.sh  cleanup-workspaces.sh  debug-guest.sh  diagnose-network.sh  diagnose-vsock.sh  e2e-test.sh  manual-boot-test.sh  setup-e2e.sh  test-fast-boot.sh  test-mcp-integration.sh  test-new-tools.sh  test-opencode-integration.sh  test-state-persistence.sh  vsock-diag.py  vsock-test.c
