[workspace]
members = ["agentiso", "guest-agent", "protocol"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = "1"
libc = "0.2"
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"
prometheus-client = "0.23"
axum = "0.8"
