[package]
name = "agentiso"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentiso"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
