[package]
name = "agentiso"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentiso"
path = "src/main.rs"

[dependencies]
agentiso-protocol = { path = "../protocol" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
toml.workspace = true
rmcp.workspace = true
schemars.workspace = true
libc.workspace = true
base64.workspace = true
ratatui.workspace = true
crossterm.workspace = true
prometheus-client.workspace = true
axum.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tower-http.workspace = true
ignore.workspace = true
serde_yaml.workspace = true
regex.workspace = true
tempfile = "3"
rust-embed.workspace = true
mime_guess.workspace = true

[dev-dependencies]
