[package]
name = "agentiso-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentiso-guest"
path = "src/main.rs"

[dependencies]
agentiso-protocol = { path = "../protocol" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.22"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
axum = "0.8"
